# tweb

./: .env  .git-blame-ignore-revs  .gitignore  .gitmodules  CLAUDE.md  README.md  electron-builder.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.electron.json  tsconfig.json  vite.config.mts  vite.config.ts
.claude/: launch.json
.claude/commands/: refactor-popup-procedural.md
.github/workflows/: deploy-cf-pages.yml  desktop-build.yml
assets/desktop-icon/: build.mjs  icon.icns
native/: .gitignore  Cargo.toml  package.json
native/src/: haptics.rs  lib.rs  scroll_monitor.rs
public/: _headers  _redirects
scripts/: build-native.mjs  electron-dev.mjs  format_lang.js  generate_icons.js  schema.js  vite-plugin-lang.js  watch-lang.js
scripts/preview/: start.sh  vite.config.mts  vite.config.ts
scripts/upstream-sync/: lib.js  normalize-imports.js  resolve-import-conflicts.js
src/: appConfig.d.ts  codeLanguages.ts  countries.ts  env.d.ts  global.d.ts  icons.ts  iconsReverse.ts  index.ts  lang.ts  langSign.ts  layer.d.ts  types.d.ts
src/components/: addChatUsers.ts  animatedCounter.ts  animatedSuper.ts  animationIntersector.ts  appMediaPlaybackController.ts  appMediaViewer.ts  appMediaViewerAvatar.ts  appMediaViewerAvatarVideo.ts  appMediaViewerBase.ts  appMediaViewerNew.ts  appMediaViewerRtmp.ts  appMediaViewerStatic.ts  appNavigationController.ts  appSearch.ts  appSearchSuper.ts  appSelectPeers.ts  archiveDialog.tsx  archiveDialogContextMenu.ts  audio.ts  autoDeleteIcon.ts  autoHeight.tsx  avatarEdit.ts  avatarNew.tsx  (+161 more)
(+1599 files in other folders)
