[package]
name = "tweb-native"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "tweb_native"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi6"] }
napi-derive = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "block2", "NSEvent", "NSResponder", "NSHapticFeedback"] }
block2 = "0.6"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
